# MLOPS-LLMOPS

./: .gitignore  README.md  dockerfile  dvc.yaml  extra_commands.txt  main.py  params.yaml  prompts.txt  pyproject.toml  requirements.txt  update.md
Datas/processed/: test_preprocessed.csv  train_preprocessed.csv
agents/: agent.py  prompts.yaml
api/: fastapi.py
models/: model.pkl
monitoring/: promptlayer.py
notebooks/: Kaggal_sample_run.ipynb  mlflow_model_log_samples.py  mlflow_sample.ipynb
notebooks[experimentation]/: mlflow_model_log_samples.py  streamlit_test.ipynb
prompt_monitoring/: opik_monitor.py
reports/: experiment_info.json  metrics.json
src/data/: data_ingestion.py
src/features/: feature_engineering.py
src/mlops_llmops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model/: model_evaluation.py  model_registary.py  model_training.py
streamlit_app/: app.py
tests/: test_model.py  test_streamlit_app.py
